# ferrum

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.zig
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  rfc.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  labeler.yml  nightly.yml  release.yml
backend/: build.zig
backend/src/: ffi.c  main.zig
core/: build.zig
core/src/: allocator.zig
frontend/: Cargo.toml  build.rs
frontend/src/: lib.rs  main.rs
frontend/src/lexer/: mod.rs  tests.rs
