[workspace]
members = ["frontend"]
resolver = "2"

[workspace.dependencies]
# Common dependencies for the workspace
clap = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
