[workspace]
members = ["frontend"]
resolver = "2"

[workspace.dependencies]
# Common dependencies for the workspace
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
